--- a/src/Resources/Home.css
+++ b/src/Resources/Home.css
@@ -1,3 +1,8 @@
 .slides{
-    margin-top: 60px;
+    margin-top: 6px;
+    padding: 0px;
+}
+#blub{
+    color: #E67882;
+    text-decoration: none;
 }
