--- a/src/Resources/Header.css
+++ b/src/Resources/Header.css
@@ -1,12 +1,12 @@
 
 :root {
     --soft-pink: #FAD4D8;
-    --deep-pink: #E67882;
+    --deep-pink: #e78e96;
     --teal: #2AB7B0;
     --light-gray: #F2F2F2;
     --charcoal: #333333;
     --barlow: 'Barlow Condensed', sans-serif;
-    --deeper-pink:#D35B68;
+    --deeper-pink:#e73d4e;
  }
 
  section {
@@ -19,12 +19,13 @@
   max-width: 600px;
   margin: 4px auto;
   text-align: center;
+  align-items: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
   
 
 #name{
-    color: var(--deep-pink);
+    color: var(--deeper-pink);
    
 }
  #logo{
